# BSUIR_APC

./: .gitmodules  CMakeLists.txt
LAB_01/: lab1_03.asm  lab1_2.asm  main.cpp
LAB_02/: main.cpp  run.bat
LAB_03/: main.cpp
LAB_04/: main.cpp
LAB_05/: main.c
LAB_06/: main.asm
